     section of asterisk.pdf.
  * The device state functionality in the Local channel driver has been updated
     to indicate INUSE or NOT_INUSE when a Local channel is being used as opposed
     to just UNKNOWN if the extension exists.
  * When originating a call using AMI or pbx_spool that fails the reason for failure
     will now be available in the failed extension using the REASON dialplan variable.
  * Added jitterbuffer support for chan_local.  This allows you to use the
     generic jitterbuffer on incoming calls going to Asterisk applications.
     For example, this would allow you to use a jitterbuffer for an incoming
     SIP call to Voicemail by putting a Local channel in the middle.  This
     feature is enabled by using the 'j' option in the Dial string to the Local
     channel in conjunction with the existing 'n' option for local channels.
  * Added support for reading the TOUCH_MONITOR_PREFIX channel variable.
     It allows you to configure a prefix for auto-monitor recordings.
  * Added support for writing and running your dialplan in lua.  See
     configs/extensions.lua.sample for examples of how to do this.
  * Added a new channel driver, chan_unistim.  See doc/unistim.txt and
     configs/unistim.conf.sample for details.  This new channel driver allows
     you to use Nortel i2002, i2004, and i2050 phones with Asterisk.
  * A new extension pattern matching algorithm, based on a trie, is introduced
    here, that could noticeably speed up mid-sized to large dialplans.
    It is NOT used by default, as duplicating the behaviour of the old pattern
    matcher is still under development. A config file option, in extensions.conf,
    in the [general] section, called "extenpatternmatchingnew", is by default
    set to false; setting that to true will force the use of the new algorithm.
    Also, the cli commands "dialplan set extenpatternmatchingnew true/false" can
    be used to switch the algorithms at run time.
